# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Released]
## [1.0.0] - 23-05-2022
### Added
- now support Manga (use mangaworld)
### Changed
- Banner

## [0.3.2] - 21-04-2022
### Fixed
- order list when add new episodes how notify
- resolve problem performance of the cpu always at 100%

## [0.3.1] - 20-04-2022
### Changed
- Now use nuget of Discord Webhook

### Add
- Support parallel now with UpdateService
- Now for notify add new Anime/Episode is incluse with image 

### Fixed
- Clear code
- Resolve order list of the episodes in web
- Improve parallel
- Improve interface web general

## [0.3.0] - 17-04-2022
### Added
- Now you can delete anime (only in db!)
- Now recive also notify of when add new anime and remove old anime

### Changed
- change color for download anime (now is yellow)

### Fixed
- Refactory code c#
- Problem check already downloaded anime with bar search to animeSaturn

### Bug
- Resolve problem method Hash when open file busy
- DownloadService delete messages duplicated

## [0.2.5] - 10-04-2022
### Fixed
- Resolve problem show disk space

## [0.2.4] - 10-04-2022
### Fixed
- Resolve problem get urls for episodes during download in parallel
- UpdateService also update the renaming of a file

### Add
- Show information space disk
- Show information health of services
- Add slide bar for see informations

## [0.2.3] - 08-04-2022
### Add
- Webhook Discord for log

### Fixed
- Module HtmlAnimeSaturn now work in parallel for download urls of episodes
- Module Download now work in parallel for second method (use with buffers) of episodes
- Fixed overflow memory when calculate hash of one episode over 1GB size

## [0.2.2] - 06-04-2022
### Add
- Setup default environment global

### Fixed
- Change structure for logger

## [0.2.1] - 05-04-2022
### Add