@@ -14,6 +14,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.38" />
     <PackageReference Include="m3uParser.NET" Version="1.0.17" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="NLog" Version="4.7.15" />
     <PackageReference Include="Quartz" Version="3.4.0" />
   </ItemGroup>
