@@ -56,7 +56,6 @@ namespace Cesxhin.AnimeSaturn.DownloadService
 
                         });
                     });
-                    services.AddMassTransitHostedService();
 
                     //setup nlog
                     var level = Environment.GetEnvironmentVariable("LOG_LEVEL").ToLower() ?? "info";
