@@ -38,7 +38,6 @@ namespace Cesxhin.AnimeSaturn.UpgradeService
                                 });
                         });
                     });
-                    services.AddMassTransitHostedService();
 
                     //setup nlog
                     var level = Environment.GetEnvironmentVariable("LOG_LEVEL").ToLower() ?? "info";
