@@ -8,8 +8,14 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [1.0.0] - 23-05-2022
 ### Added
 - now support Manga (use mangaworld)
+
 ### Changed
 - Banner
+- Structure DB
+
+### Fixed
+- Problem refresh when delete anime/manga
+- Disable autoset season for anime
 
 ## [0.3.2] - 21-04-2022
 ### Fixed
